--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,81 @@
-.App {
-  text-align: center;
+.app {
+display: flex;
+justify-content: center;
+align-items: center;
+background-color: #232E3F;
+height: 100vh;
+color: white;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ .container {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: #131921;
+  height: 80vh;
+  width: 40rem;
+  margin: 60px;
+  flex-direction: column;
+  border-radius: 10px;
+ }
+
+ .form {
+display: flex;
+align-items: center;
+justify-content: space-around;
+margin-bottom: 20px;
+width: 500px;
+ }
+
+ .input {
+  display: flex;
+  width: 80%;
+  height: 20px;
+  padding: 10px;
+  border-radius: 10px;
+  border: none;
+
+ }
+ .todolist {
+list-style: none;
+margin: 0;
+padding: 0;
+
+ }
+
+ button {
+border: none;
+  padding: 10px;
+  margin: 5px 10px;
+  border-radius: 10px;
+  background-color: rgb(39, 111, 179);
+  font-size: 20px;
   color: white;
-}
+ }
+ button:hover{
+  background-color: rgb(38, 38, 243);
+ }
 
-.App-link {
-  color: #61dafb;
-}
+ .singletodo {
+  display: flex;
+  width: 500px;
+  border-radius: 20px;
+  margin: 10px  0px;
+  background-color:#232E3F;
+  align-items: center;
+  padding: 2px 10px;
+  font-size: 25px;
+  
+ }
+  .todoname {
+    flex: 1;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
   }
-  to {
-    transform: rotate(360deg);
+
+  .delbutton {
+    background-color:  rgb(190, 67, 67);
   }
-}
+  .delbutton:hover{
+    background-color: red;
+  }
+  .addbutton:hover{
+    background-color: green;
+  }
